Use snake_case datasets

--- a/README.Rmd
+++ b/README.Rmd
@@ -51,7 +51,7 @@ For example, one can retrieve the colour palette dataset defined for plots in
 1 in 1000 research stream. 
 
 ```{r}
-palette <- palette.1in1000.plot
+palette <- palette_1in1000_plot
 palette
 
 munsell::plot_hex(palette$hex)
@@ -63,7 +63,7 @@ their plots.
 ```{r}
 colours <- get_colours(
   c("green", "grey", "red"), 
-  palette = palette.1in1000.goodbad
+  palette = palette_1in1000_goodbad
   )
 
 ggplot(mtcars, aes(x = wt, y = mpg, colour = factor(cyl))) + 
