--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# r2dii.colours <a href='https://github.com/2DegreesInvesting/r2dii.colours'><img src='https://imgur.com/A5ASZPE.png' align='right' height='43' /></a>
+# r2dii.colours <a href='https://github.com/2DegreesInvesting/r2dii.colours'><img src='https://imgur.com/A5ASZPE.png' align ='right' style = 'height:43px;' /></a>
 
 <!-- badges: start -->
 [![Lifecycle:
